pallini nella timeline (ma quadrati!)

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <section class="container">
         <div class="row justify-content-around cards-row mx-3">
             <div class="col-6 col-md-3 mt-5 card-elements">
-                <div class="card ps-2 pt-5 card1">
+                <div class="card px-2 pt-5 card1">
                     <i class="fa-solid pb-1 fa-users text-white"></i>
                     <p class="testo-card">Lorem</p>
                     <hr class="card-line">
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="col-6 col-md-3 mt-5 card-elements">
-                <div class="card ps-2 pt-5 card2">
+                <div class="card px-2 pt-5 card2">
                     <i class="fa-solid pb-1 fa-location-dot text-white"></i>
                     <p class="testo-card">Lorem</p>
                     <hr class="card-line">
@@ -66,7 +66,7 @@
                 </div>                
             </div>
             <div class="col-6 col-md-3 mt-5 card-elements">
-                <div class="card ps-2 pt-5 card3">
+                <div class="card px-2 pt-5 card3">
                     <i class="fa-solid pb-1 fa-life-ring text-white"></i>
                     <p class="testo-card">Lorem</p>
                     <hr class="card-line">
@@ -74,7 +74,7 @@
                 </div>                
             </div>
             <div class="col-6 col-md-3 mt-5 card-elements">
-                <div class="card ps-2 pt-5 card4">
+                <div class="card px-2 pt-5 card4">
                     <i class="fa-solid pb-1 fa-route text-white"></i>
                     <p class="testo-card">Lorem</p>
                     <hr class="card-line">
@@ -155,30 +155,30 @@
 
     <div class="container-fluid p-0 timeline-container">
         <div class="row p-0 m-0">
-            <div class="col-12">
+            <div class="col-12 mb-4">
                 <h2 class="little-title text-center mb-3">Lorem ipsum <br> dolor sit</h2>
             </div>
         </div>
-        <div class="row mx-5">
-            <div class="col-12 first-time-element">
+        <div class="row mx-5 row-start-elements">
+            <div class="col-12 first-time-element odd-time-elements">
                 <h3 class="pt-2 very-little">Lorem</h3>
                 <p class="subtitle text-secondary pt-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet repellat doloribus iusto fugiat atque ratione voluptate deleniti eos placeat odio iure culpa dignissimos dicta animi reprehenderit asperiores laudantium, sequi esse.</p>
             </div>
         </div>
         <div class="row mx-5 row-end-elements">
-            <div class="col-12 second-time-element">
+            <div class="col-12 second-time-element even-time-elements">
                 <h3 class="col-12 pt-2 very-little text-end">Lorem</h3>
                 <p class="col-12 subtitle text-secondary pt-1 text-end">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet repellat doloribus iusto fugiat atque ratione voluptate deleniti eos placeat odio iure culpa dignissimos dicta animi reprehenderit asperiores laudantium, sequi esse.</p>
             </div>
         </div>
-        <div class="row mx-5">
-            <div class="col-12 third-time-element">
+        <div class="row mx-5 row-start-elements">
+            <div class="col-12 third-time-element odd-time-elements">
                 <h3 class="pt-2 very-little">Lorem</h3>
                 <p class="subtitle text-secondary pt-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet repellat doloribus iusto fugiat atque ratione voluptate deleniti eos placeat odio iure culpa dignissimos dicta animi reprehenderit asperiores laudantium, sequi esse.</p>
             </div>
         </div>
         <div class="row mx-5 row-end-elements">
-            <div class="col-12 fourth-time-element"> 
+            <div class="col-12 fourth-time-element even-time-elements"> 
                 <h3 class="col-12 pt-2 very-little text-end">Lorem</h3>
                 <p class="col-12 subtitle text-secondary pt-1 text-end">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet repellat doloribus iusto fugiat atque ratione voluptate deleniti eos placeat odio iure culpa dignissimos dicta animi reprehenderit asperiores laudantium, sequi esse.</p>
             </div>
@@ -194,7 +194,7 @@
         <footer class="row justify-content-between footer-elements">
             <div class="col-12 col-md-6 px-5">
                 <h2 class="verylittle2 text-warning">Lorem ipsum dolor</h2>
-                <p class="subtitle2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem eveniet suscipit praesentium doloribus quidem eum dolor laborum, nam vero, ut sed reprehenderit voluptate, quis quia laudantium sequi dolorum corrupti quibusdam!</p>
+                <p class="subtitle3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem eveniet suscipit praesentium doloribus quidem eum dolor laborum, nam vero, ut sed reprehenderit voluptate, quis quia laudantium sequi dolorum corrupti quibusdam!</p>
             </div>
             <div class="col-12 col-md-6 px-5 pb-3">
                 <div class="row justify-content-between pe-3">
