--- a/index.html
+++ b/index.html
@@ -121,6 +121,49 @@
     </section>
 
 
+    <!-- SEZIONE C -->
+    <section class="container-fluid">
+        <div class="row ms-5 ms-md-2">
+            <div class="col-7 col-md-5 ms-4 mt-5 d-flex justify-content-center">
+                <div class="card c-d-sections-cards1">
+                    <div class="c-d-content">
+                        <i class="fa-solid fa-route c-d-sections-icons"></i>
+                        <div class="c-d-number">12</div>
+                        <p>Lorem ipsum dolor, sit amet consectetur.</p>
+                    </div>
+                </div>
+                <div class="card c-d-sections-cards2 ms-3">
+                    <div class="c-d-content2">
+                        <i class="fa-solid fa-compass c-d-sections-icons"></i>
+                        <div class="c-d-number">412</div>
+                        <p>Lorem ipsum.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row ms-5 ms-md-2">
+            <div class="col-8 col-md-5 ms-4 mt-2 d-flex justify-content-center c-d-second-row">
+                <div class="card c-d-sections-cards1 c-d-second-row-width">
+                    <div class="c-d-content3">
+                        <i class="fa-solid fa-route c-d-sections-icons"></i>
+                        <div class="c-d-number2">12</div>
+                        <p>Lorem ipsum dolor, sit amet consectetur.</p>
+                    </div>
+                </div>
+                <div class="card c-d-sections-cards3 ms-3">
+                    <div class="c-d-content4">
+                        <i class="fa-solid fa-compass c-d-sections-icons"></i>
+                        <div class="c-d-number2">412</div>
+                        <p>Lorem ipsum.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- SEZIONE D //da fare -->
+
+
     <!-- SEZIONE E -->
     <!-- first part -->
     <section class="container-fluid">
