terminato tranne pallini su timeline

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!-- CSS Fontawesome -->
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/regular.min.css" integrity="sha512-YoxvmIzlVlt4nYJ6QwBqDzFc+2aXL7yQwkAuscf2ZAg7daNQxlgQHV+LLRHnRXFWPHRvXhJuBBjQqHAqRFkcVw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- MIO CSS -->
     <link rel="stylesheet" href="./style.css">
@@ -48,7 +49,7 @@
     <!-- CARDS -->
      
     <section class="container">
-        <div class="row justify-content-around cards-row mx-3">
+        <div class="row justify-content-around cards-row my-4 mt-lg-5 margin-top-cards">
             <div class="col-6 col-md-3 mt-5 card-elements">
                 <div class="card px-2 pt-5 card1">
                     <i class="fa-solid pb-1 fa-users text-white"></i>
@@ -122,9 +123,9 @@
 
 
     <!-- SEZIONE C -->
-    <section class="container-fluid">
-        <div class="row ms-5 ms-md-2">
-            <div class="col-7 col-md-5 ms-4 mt-5 d-flex justify-content-center">
+    <section class="container-fluid rows">
+        <div class="row ms-md-5 ms-0">
+            <div class="col-12 col-md-5 ms-md-4 mt-5 d-flex justify-content-start c-d-first-row">
                 <div class="card c-d-sections-cards1">
                     <div class="c-d-content">
                         <i class="fa-solid fa-route c-d-sections-icons"></i>
@@ -141,8 +142,8 @@
                 </div>
             </div>
         </div>
-        <div class="row ms-5 ms-md-2">
-            <div class="col-8 col-md-5 ms-4 mt-2 d-flex justify-content-center c-d-second-row">
+        <div class="row ms-md-5 ms-0">
+            <div class="col-12 col-md-5 ms-md-4 mt-2 d-flex justify-content-start c-d-second-row">
                 <div class="card c-d-sections-cards1 c-d-second-row-width">
                     <div class="c-d-content3">
                         <i class="fa-solid fa-route c-d-sections-icons"></i>
@@ -161,7 +162,45 @@
         </div>
     </section>
 
-    <!-- SEZIONE D //da fare -->
+    <!-- SEZIONE D -->
+    <section class="container-fluid">
+        <div class="row me-md-5 me-0 d-section-row">
+            <div class="col-12 col-md-5 me-md-4 mt-5 d-flex justify-content-end c-d-third-row">
+                <div class="card c-d-sections-cards1 c-d-second-row-width me-3">
+                    <div class="c-d-content3">
+                        <i class="fa-solid fa-route c-d-sections-icons"></i>
+                        <div class="c-d-number2">12</div>
+                        <p>Lorem ipsum dolor, sit amet consectetur.</p>
+                    </div>
+                </div>
+                <div class="card c-d-sections-cards3 me-md-3">
+                    <div class="c-d-content4">
+                        <i class="fa-solid fa-compass c-d-sections-icons"></i>
+                        <div class="c-d-number2">412</div>
+                        <p>Lorem ipsum.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row me-md-5 me-0 d-section-row justify-content-end">
+            <div class="col-12 col-md-9 me-md-4 mt-2 d-flex justify-content-end c-d-fourth-row px-0">
+                <div class="card c-d-sections-cards1 c-d-second-row-width me-3">
+                    <div class="c-d-content3">
+                        <i class="fa-solid fa-person-hiking c-d-sections-icons"></i>
+                        <div class="c-d-number2">12</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="card c-d-sections-cards1 widthing">
+                    <div class="c-d-content5">
+                        <i class="fa-solid fa-truck c-d-sections-icons"></i>
+                        <div class="c-d-number2">412</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, enim! Sit, quam.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <!-- SEZIONE E -->
@@ -199,7 +238,7 @@
     <div class="container-fluid p-0 timeline-container">
         <div class="row p-0 m-0">
             <div class="col-12 mb-4">
-                <h2 class="little-title text-center mb-3">Lorem ipsum <br> dolor sit</h2>
+                <h2 class="little-title2 text-center mb-3">Lorem ipsum <br> dolor sit</h2>
             </div>
         </div>
         <div class="row mx-5 row-start-elements">
