--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 
 
     <!-- FOOTER -->
-    <div class="container-fluid footer-container">
+    <div class="container-fluid footer-container pe-0">
         <footer class="row justify-content-between footer-elements">
             <div class="col-12 col-md-6 px-5">
                 <h2 class="verylittle2 text-warning">Lorem ipsum dolor</h2>
