different random pics in section e

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             </div>
             <div class="col-12 col-md-4 mt-5 mt-md-0 d-flex justify-content-center">
                 <div class="border-border">
-                    <img src="https://picsum.photos/150" alt="Immagine tonda casuale" class="round-pic">
+                    <img src="https://picsum.photos/150?random=1" alt="Immagine tonda casuale" class="round-pic">
                 </div>
             </div>
         </div>
@@ -223,7 +223,7 @@
         <div class="row justify-content-evenly mt-5 align-items-center">
             <div class="col-12 col-md-4 d-flex justify-content-center">
                 <div class="border-border">
-                    <img src="https://picsum.photos/150" alt="Immagine tonda casuale" class="round-pic">
+                    <img src="https://picsum.photos/150?random=2" alt="Immagine tonda casuale" class="round-pic">
                 </div>
             </div>
             <div class="col-12 col-md-5 mt-5 mt-md-0 me-4 card box-shad2">
