added switch button on section b

--- a/index.html
+++ b/index.html
@@ -89,39 +89,14 @@
     <!-- SEZIONE B -->
 
     <section class="container-fluid my-4">
-        <div class="row justify-content-around">
-            <div class="col-12 col-md-5 mt-5 ms-4 card box-shad">
-                <h5 class="very-little">Lorem ipsum</h5>
-                <p class="subtitle2 text-secondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex pariatur molestiae soluta sunt earum, magnam rerum iure perferendis quae nisi numquam nobis aliquam consectetur explicabo.</p>
-            </div>
-            <div class="col-12 col-md-5 mt-5 main-icons-container">
-                <div class="row icons-row mt-4 mt-md-0">
-                    <div class="col-2">
-                        <i class="card icon-box fa-solid fa-fire text-danger"></i>
-                   </div>
-                    <div class="col-2">
-                        <i class="card icon-box fa-solid fa-seedling text-success"></i>              
-                    </div>
-                    <div class="col-2">
-                        <i class="card icon-box fa-solid fa-bell text-warning"></i>
-                    </div>
-                </div>
-                <div class="row icons-row mt-4 mt-md-0">
-                    <div class="col-2">
-                        <i class="card icon-box fa-solid fa-box-open text-primary"></i>
-                    </div>
-                    <div class="col-2">
-                        <i class="card icon-box fa-solid fa-code-branch text-secondary"></i>
-                    </div>
-                    <div class="col-2">
-                        <i class="card icon-box fa-solid fa-shield-halved text-dark"></i>
-                    </div>
-                </div>
+        <div id="b-section-elements" class="row justify-content-around">
+            <div id="b-switchBtn" class="col-12 col-md-1 d-flex justify-content-center pt-5 align-items-center">
+                <i class="fa-solid fa-arrows-left-right"></i>
             </div>
         </div>
     </section>
-
-
+    
+    
     <!-- SEZIONE C -->
     <section class="container-fluid rows">
         <div class="row ms-md-5 ms-0">
@@ -284,16 +259,16 @@
                         <h2 class="verylittle2 text-warning">Social</h2>
                     </div>
                     <div class="col-1">
-                        <i class="fa-brands fa-facebook-f text-white"></i>
+                        <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f text-white"></i></a>
                     </div>
                     <div class="col-1">
-                        <i class="fa-brands fa-instagram text-white"></i>
+                        <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram text-white"></i></a>
                     </div>
                     <div class="col-1">
-                        <i class="fa-brands fa-twitter text-white"></i>
+                        <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter text-white"></i></a>
                     </div>
                     <div class="col-1">
-                        <i class="fa-brands fa-linkedin text-white"></i>
+                        <a href="https://it.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin text-white"></i></a>
                     </div>
                 </div>
             </div>
@@ -304,5 +279,6 @@
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
+    <script src="./script.js"></script>
   </body>
 </html>
